# influxDB2-proxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
data/: acc4.csv  acc8.csv  test.csv
influxdb2_proxy/: proxy.py
influxdb2_proxy/config/: credentials.yaml
tests/: test_basic.py
